[gd_scene load_steps=9 format=3 uid="uid://cyk3hy3amh3yg"]

[ext_resource type="Script" path="res://scripts/character_controller.gd" id="1_7tgdb"]
[ext_resource type="Script" path="res://scripts/camera_controller.gd" id="2_mlg4r"]
[ext_resource type="Script" path="res://scripts/wallrunning.gd" id="4_nu13q"]
[ext_resource type="Script" path="res://scripts/jumping.gd" id="5_2riwn"]
[ext_resource type="Script" path="res://scripts/sliding.gd" id="6_1avth"]
[ext_resource type="Script" path="res://scripts/grappling_hook.gd" id="7_n6l14"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m5mmo"]
radius = 0.35

[sub_resource type="CapsuleMesh" id="CapsuleMesh_yby36"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 128
collision_mask = 129
floor_block_on_wall = false
script = ExtResource("1_7tgdb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_m5mmo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_yby36")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.468, 0)
script = ExtResource("2_mlg4r")
sens_x = 0.001
sens_y = 0.001

[node name="MainCamera" type="Camera3D" parent="Head"]

[node name="Control" type="Control" parent="Head/MainCamera"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Head/MainCamera/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.5
offset_top = -1.5
offset_right = 1.5
offset_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Head/MainCamera/Control"]
layout_mode = 0
offset_left = -530.0
offset_top = -275.0
offset_right = -448.0
offset_bottom = -237.0

[node name="WeaponCamera" type="Camera3D" parent="Head"]
visible = false

[node name="LeftCast" type="RayCast3D" parent="Head"]
target_position = Vector3(-0.75, 0, 0)
collide_with_areas = true

[node name="RightCast" type="RayCast3D" parent="Head"]
target_position = Vector3(0.75, 0, 0)
collide_with_areas = true

[node name="WallMovement" type="Node" parent="."]
script = ExtResource("4_nu13q")

[node name="Jumping" type="Node" parent="."]
script = ExtResource("5_2riwn")

[node name="Sliding" type="Node" parent="."]
script = ExtResource("6_1avth")

[node name="GrapplingHook" type="Node3D" parent="."]
script = ExtResource("7_n6l14")
hook_speed = 100.0
retract_speed = 15.0
initial_push_strength = 15.0

[connection signal="new_state" from="." to="WallMovement" method="_on_player_new_state"]
[connection signal="hook_attached" from="GrapplingHook" to="." method="_on_new_grappling_hook_hook_attached"]
[connection signal="hook_attached" from="GrapplingHook" to="GrapplingHook" method="_on_hook_attached"]
[connection signal="hook_detached" from="GrapplingHook" to="." method="_on_new_grappling_hook_hook_detached"]
[connection signal="hook_detached" from="GrapplingHook" to="GrapplingHook" method="_on_hook_detached"]
